# chimera

./: .env.example  .gitignore  LEGAL.md  Makefile  README.md  pyproject.toml  tool_manifest.json
bridge/: __init__.py  aggregator.py  app.py  auth.py  config.py  logging_setup.py  manifest.py  metrics.py  middleware.py  queue.py  scheduler.py  schemas.py  workers.py
docs/: ACCOUNT_FACTORY.md  API.md  ARCHITECTURE.md  CHIMERA_MASTER_v1_1.md  E2E_SESSION1.md  PRODUCTION.md  ROADMAP.md  RUNBOOK.md  SCHEMA.md  SITEMAP.md  TECH_DEBT.md  WHITELIST_DOMAINS.md  chimera_stealth_architecture.md  chimera_stealth_roadmap.md
logs/: token_usage.jsonl
scripts/: audit.py  bridge_dev.sh  chaos_test.py  check_env.sh  compare_ebay_results.py  flipmachine_e2e.py  redis_dev.sh  scrape_cron.py  test_watchcount_vision.py  validate_manifest.py  worker_dev.sh
tests/: conftest.py  test_2ememain_endpoint.py  test_2ememain_spider.py  test_account_factory.py  test_aggregate_endpoint.py  test_brightdata.py  test_camoufox_runner.py  test_chaos.py  test_dashboard.py  test_domain_validator.py  test_ebay_auth.py  test_ebay_endpoint.py  test_ebay_spider.py  test_epid_calculator.py  test_epid_endpoints.py  test_escalate_endpoint.py  test_escalation.py  test_escalation_engine.py  test_fingerprint_loader.py  test_fingerprint_validator.py  test_flip_scorer.py  test_flipmachine_e2e.py  test_flipmachine_endpoints.py  test_groq_vision.py  test_metrics.py  test_navigator_agent.py  test_probe.py  test_probe_ssrf_e2e.py  test_probe_timeout.py  test_profile_manager.py  test_profile_manager_sqlite.py  (+31 more)
(+68 files in other folders)
